--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="margin_5_dp">5dp</dimen>
     <dimen name="temperature_value_text_size">14sp</dimen>
     <dimen name="feels_like_text_size">14sp</dimen>
+    <dimen name="city_list_name_size">25sp</dimen>
+    <dimen name="margin_15_dp">15dp</dimen>
 </resources>
